# DeviceSensorMonitor

./: .gitignore  CMakeLists.txt  README..md  README.md
src/: MainWindow.cpp  MainWindow.h  SensorData.cpp  SensorData.h  SensorSimulator.cpp  SensorSimulator.h  main.cpp
